[gd_scene load_steps=7 format=3 uid="uid://vqro77kagm5m"]

[ext_resource type="Script" path="res://src/scenes/menu/menu.gd" id="1_6s0fk"]
[ext_resource type="Texture2D" uid="uid://wttefocce8u0" path="res://resources/images/chien_fixe.png" id="2_fsttc"]
[ext_resource type="Texture2D" uid="uid://b0mlokg7skn1d" path="res://resources/images/chien_aboie.png" id="3_5dj14"]
[ext_resource type="Texture2D" uid="uid://r6eipbpvslqq" path="res://resources/images/chien_cours.png" id="4_u3gfn"]
[ext_resource type="Texture2D" uid="uid://dpubu47aoxb2s" path="res://resources/images/chien_cours2.png" id="5_reg57"]

[sub_resource type="SpriteFrames" id="SpriteFrames_io443"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": ExtResource("2_fsttc")
}, {
"duration": 1.0,
"texture": ExtResource("3_5dj14")
}],
"loop": true,
"name": &"aboie",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("4_u3gfn")
}, {
"duration": 1.5,
"texture": ExtResource("5_reg57")
}],
"loop": true,
"name": &"court",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fsttc")
}],
"loop": true,
"name": &"fixe",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6s0fk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -80.0
offset_right = 108.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SheepText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Number of sheep :"
fit_content = true

[node name="SheepNum" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 20.0
value = 5.0

[node name="TurnText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Number of rounds :"
fit_content = true

[node name="TurnNum" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(73, 62)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_io443")
animation = &"court"
autoplay = "court"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SheepNum" to="." method="_on_sheep_num_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TurnNum" to="." method="_on_turn_num_value_changed"]
